--- a/.config
+++ b/.config
@@ -4,10 +4,6 @@
 #
 
 #
-# Konfiguration
-#
-
-#
 # Basissystem
 #
 CONFIG_CPU_FREQUENCY=12000000
@@ -18,3 +14,11 @@ CONFIG_ASPECTS=y
 #
 CONFIG_DEBUG_PANIC=y
 CONFIG_DEBUG_GUARD=y
+
+#
+# Funktion
+#
+CONFIG_BUTTON_SERVICE=y
+CONFIG_WECKER=y
+CONFIG_FUNK=y
+CONFIG_CPU_WATCH=y
